# RoyAndIdanProject2

./: AStar.cpp  AStar.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DepthFirstSearch.cpp  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  HillClimbing.cpp  HillClimbing.h  Matrix.cpp  Matrix.h  MatrixClientHandler.cpp  MatrixClientHandler.h  MatrixSolver.cpp  MatrixSolver.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ParallelServer.cpp  ParallelServer.h  Point.cpp  Point.h  Searchable.h  Searcher.h  Server.cpp  Server.h  ServerCommunication.cpp  ServerCommunication.h  Solver.h  SolverSearcher.cpp  State.cpp  State.h  main.cpp
